--- a/blogpost.html
+++ b/blogpost.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div id="cabecera">
-        Cabercera
-    </div>
     <div id="container">
+        <div id="cabecera">
+        Hyperblog
+        <span id="tagline">
+            Tu blog de confianza
+        </span>
+    </div>
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
     </div>
