--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     <div id="container">
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+        <p>Los blogs son la mejor forma de compartir informaición y tus ideas. Mucho más que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora</p>
     </div>
 </body>
 </html>
