--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
     </div>
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con las ramas</p>
+        <p><img src="imagenes/bg.jpg" width="100%" alt=""></p>
         <p>Los blogs son la mejor forma de compartir informaición y tus ideas. Mucho más que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora</p>
         <p>Suscirbete y dale like</p>
     </div>
