--- a/blogpost.html
+++ b/blogpost.html
@@ -19,5 +19,8 @@
         <p>Los blogs son la mejor forma de compartir informaición y tus ideas. Mucho más que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora</p>
         <p>Suscirbete y dale like</p>
     </div>
+    <div id="footer">
+        Hecho con amor en VSC
+    </div>
 </body>
 </html>
